대충 디자인 바꿈

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
+    <div class="top_navigation">
+    <label>
       <input type="radio" name="room" value="desk"  />
-      데스크</label
-    >
-    <label
-      ><input type="radio" name="room" value="dr"  />
-      진료실</label
+      데스크
+    </label>
+    <label>
+      <input type="radio" name="room" value="dr"  />
+      진료실
+    </label
     >
   </div>
     <div class="container">
