[Fix] edit chartNumber

--- a/public/index.html
+++ b/public/index.html
@@ -241,7 +241,8 @@
         <h3>환자 정보 수정</h3>
         <form id="editPatientForm">
           <label>차트번호</label>
-          <input type="text" id="editPatientId" />
+          <input type="hidden" id="editPatientId" />
+          <input type="text" id="editChartNumber" />
           <label>이름</label>
           <input type="text" id="editName" /><br />
           <label>이니셜</label>
